@@ -471,7 +471,7 @@ name|this
 operator|.
 name|doc
 argument_list|()
-operator|>
+operator|>=
 name|lastScoredDoc
 condition|)
 block|{
@@ -607,7 +607,7 @@ name|this
 operator|.
 name|doc
 argument_list|()
-operator|>
+operator|>=
 name|lastScoredDoc
 condition|)
 block|{
@@ -695,7 +695,7 @@ name|this
 operator|.
 name|doc
 argument_list|()
-operator|>
+operator|>=
 name|lastScoredDoc
 condition|)
 block|{
