@@ -328,6 +328,13 @@ name|IndexSearcher
 operator|)
 name|s
 decl_stmt|;
+name|checkFirstSkipTo
+argument_list|(
+name|q1
+argument_list|,
+name|is
+argument_list|)
+expr_stmt|;
 name|checkSkipTo
 argument_list|(
 name|q1
@@ -387,7 +394,7 @@ name|getAllowDocsOutOfOrder
 argument_list|()
 condition|)
 return|return;
-comment|// 1.4 doesn't support skipTo
+comment|// in this case order of skipTo() might differ from that of next().
 specifier|final
 name|int
 name|skip_op
@@ -408,11 +415,11 @@ index|[]
 init|=
 block|{
 block|{
-name|skip_op
+name|next_op
 block|}
 block|,
 block|{
-name|next_op
+name|skip_op
 block|}
 block|,
 block|{
@@ -627,6 +634,14 @@ name|score
 argument_list|()
 decl_stmt|;
 name|float
+name|scorerScore2
+init|=
+name|scorer
+operator|.
+name|score
+argument_list|()
+decl_stmt|;
+name|float
 name|scoreDiff
 init|=
 name|Math
@@ -638,11 +653,22 @@ operator|-
 name|scorerScore
 argument_list|)
 decl_stmt|;
+name|float
+name|scorerDiff
+init|=
+name|Math
+operator|.
+name|abs
+argument_list|(
+name|scorerScore2
+operator|-
+name|scorerScore
+argument_list|)
+decl_stmt|;
 if|if
 condition|(
+operator|!
 name|more
-operator|==
-literal|false
 operator|||
 name|doc
 operator|!=
@@ -652,6 +678,10 @@ literal|0
 index|]
 operator|||
 name|scoreDiff
+operator|>
+name|maxDiff
+operator|||
+name|scorerDiff
 operator|>
 name|maxDiff
 condition|)
@@ -701,18 +731,56 @@ name|RuntimeException
 argument_list|(
 literal|"ERROR matching docs:"
 operator|+
-literal|"\n\tscorer.more="
+literal|"\n\t"
 operator|+
-name|more
+operator|(
+name|doc
+operator|!=
+name|sdoc
+index|[
+literal|0
+index|]
+condition|?
+literal|"--> "
+else|:
+literal|""
+operator|)
 operator|+
-literal|" doc="
+literal|"doc="
 operator|+
 name|sdoc
 index|[
 literal|0
 index|]
 operator|+
-literal|" scorerScore="
+literal|"\n\t"
+operator|+
+operator|(
+operator|!
+name|more
+condition|?
+literal|"--> "
+else|:
+literal|""
+operator|)
+operator|+
+literal|"tscorer.more="
+operator|+
+name|more
+operator|+
+literal|"\n\t"
+operator|+
+operator|(
+name|scoreDiff
+operator|>
+name|maxDiff
+condition|?
+literal|"--> "
+else|:
+literal|""
+operator|)
+operator|+
+literal|"scorerScore="
 operator|+
 name|scorerScore
 operator|+
@@ -723,6 +791,26 @@ operator|+
 literal|" maxDiff="
 operator|+
 name|maxDiff
+operator|+
+literal|"\n\t"
+operator|+
+operator|(
+name|scorerDiff
+operator|>
+name|maxDiff
+condition|?
+literal|"--> "
+else|:
+literal|""
+operator|)
+operator|+
+literal|"scorerScore2="
+operator|+
+name|scorerScore2
+operator|+
+literal|" scorerDiff="
+operator|+
+name|scorerDiff
 operator|+
 literal|"\n\thitCollector.doc="
 operator|+
@@ -740,6 +828,16 @@ literal|"\n\t Query="
 operator|+
 name|q
 operator|+
+literal|"  "
+operator|+
+name|q
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+operator|+
 literal|"\n\t Searcher="
 operator|+
 name|s
@@ -747,6 +845,18 @@ operator|+
 literal|"\n\t Order="
 operator|+
 name|sbord
+operator|+
+literal|"\n\t Op="
+operator|+
+operator|(
+name|op
+operator|==
+name|skip_op
+condition|?
+literal|" skip()"
+else|:
+literal|" next()"
+operator|)
 argument_list|)
 throw|;
 block|}
@@ -821,6 +931,316 @@ name|more
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+comment|// check that first skip on just created scorers always goes to the right doc
+DECL|method|checkFirstSkipTo
+specifier|private
+specifier|static
+name|void
+name|checkFirstSkipTo
+parameter_list|(
+specifier|final
+name|Query
+name|q
+parameter_list|,
+specifier|final
+name|IndexSearcher
+name|s
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+comment|//System.out.println("checkFirstSkipTo: "+q);
+specifier|final
+name|float
+name|maxDiff
+init|=
+literal|1e-5f
+decl_stmt|;
+specifier|final
+name|int
+name|lastDoc
+index|[]
+init|=
+block|{
+operator|-
+literal|1
+block|}
+decl_stmt|;
+name|s
+operator|.
+name|search
+argument_list|(
+name|q
+argument_list|,
+operator|new
+name|HitCollector
+argument_list|()
+block|{
+specifier|public
+name|void
+name|collect
+parameter_list|(
+name|int
+name|doc
+parameter_list|,
+name|float
+name|score
+parameter_list|)
+block|{
+comment|//System.out.println("doc="+doc);
+try|try
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+name|lastDoc
+index|[
+literal|0
+index|]
+operator|+
+literal|1
+init|;
+name|i
+operator|<=
+name|doc
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Weight
+name|w
+init|=
+name|q
+operator|.
+name|weight
+argument_list|(
+name|s
+argument_list|)
+decl_stmt|;
+name|Scorer
+name|scorer
+init|=
+name|w
+operator|.
+name|scorer
+argument_list|(
+name|s
+operator|.
+name|getIndexReader
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|TestCase
+operator|.
+name|assertTrue
+argument_list|(
+literal|"query collected "
+operator|+
+name|doc
+operator|+
+literal|" but skipTo("
+operator|+
+name|i
+operator|+
+literal|") says no more docs!"
+argument_list|,
+name|scorer
+operator|.
+name|skipTo
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|TestCase
+operator|.
+name|assertEquals
+argument_list|(
+literal|"query collected "
+operator|+
+name|doc
+operator|+
+literal|" but skipTo("
+operator|+
+name|i
+operator|+
+literal|") got to "
+operator|+
+name|scorer
+operator|.
+name|doc
+argument_list|()
+argument_list|,
+name|doc
+argument_list|,
+name|scorer
+operator|.
+name|doc
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|float
+name|skipToScore
+init|=
+name|scorer
+operator|.
+name|score
+argument_list|()
+decl_stmt|;
+name|TestCase
+operator|.
+name|assertEquals
+argument_list|(
+literal|"unstable skipTo("
+operator|+
+name|i
+operator|+
+literal|") score!"
+argument_list|,
+name|skipToScore
+argument_list|,
+name|scorer
+operator|.
+name|score
+argument_list|()
+argument_list|,
+name|maxDiff
+argument_list|)
+expr_stmt|;
+name|TestCase
+operator|.
+name|assertEquals
+argument_list|(
+literal|"query assigned doc "
+operator|+
+name|doc
+operator|+
+literal|" a score of<"
+operator|+
+name|score
+operator|+
+literal|"> but skipTo("
+operator|+
+name|i
+operator|+
+literal|") has<"
+operator|+
+name|skipToScore
+operator|+
+literal|">!"
+argument_list|,
+name|score
+argument_list|,
+name|skipToScore
+argument_list|,
+name|maxDiff
+argument_list|)
+expr_stmt|;
+block|}
+name|lastDoc
+index|[
+literal|0
+index|]
+operator|=
+name|doc
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+name|Weight
+name|w
+init|=
+name|q
+operator|.
+name|weight
+argument_list|(
+name|s
+argument_list|)
+decl_stmt|;
+name|Scorer
+name|scorer
+init|=
+name|w
+operator|.
+name|scorer
+argument_list|(
+name|s
+operator|.
+name|getIndexReader
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|boolean
+name|more
+init|=
+name|scorer
+operator|.
+name|skipTo
+argument_list|(
+name|lastDoc
+index|[
+literal|0
+index|]
+operator|+
+literal|1
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|more
+condition|)
+name|TestCase
+operator|.
+name|assertFalse
+argument_list|(
+literal|"query's last doc was "
+operator|+
+name|lastDoc
+index|[
+literal|0
+index|]
+operator|+
+literal|" but skipTo("
+operator|+
+operator|(
+name|lastDoc
+index|[
+literal|0
+index|]
+operator|+
+literal|1
+operator|)
+operator|+
+literal|") got to "
+operator|+
+name|scorer
+operator|.
+name|doc
+argument_list|()
+argument_list|,
+name|more
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
